# 2020_Asocijacije

./: .gitignore  LICENSE  README-sr.md  README.md  asocijacije.cabal  compile.sh  easyCompile.sh
asset/: settings.json
asset/association/: asocijacija1.json  asocijacija11.json  asocijacija3.json  asocijacija5.json  asocijacija7.json  asocijacija9.json
src/: Game.hs  GameState.hs  Load.hs  LoadAssociation.hs  LoadSettings.hs  Logic.hs  Main.hs  Strings.hs  Types.hs  UI.hs  gresource.xml  testLoad.hs  ui.glade
src/Templates/: asocijacijaTemplate.json
src/folderSaAsocijacijama/: asocijacija1.json  asocijacija10.json  asocijacija12.json  asocijacija2.json  asocijacija3.json  asocijacija4.json  asocijacija6.json  asocijacija8.json
src/resources/: settings.json  settings_default.json  style.css  ui.glade
