name:                asocijacije
version:             0.1.0.0
synopsis:            Simple game from serbian quiz show Slagalica
description:         See files README-en.md or README.md 
homepage:            https://github.com/ffilipovicc98/asocijacije
license:             MIT
license-file:        LICENSE
author:              Filip Filipović and Nikola Ubavić
maintainer:          example@example.com
copyright:           2020 Filip Filipović, Nikola Ubavić
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable asocijacije
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
