name:                asocijacije
version:             0.2
synopsis:            Simple game from serbian quiz show Slagalica
description:         See files README.md or README-sr.md 
homepage:            https://github.com/ffilipovicc98/asocijacije
license:             MIT
license-file:        LICENSE
author:              Filip Filipović and Nikola Ubavić
maintainer:          example@example.com
copyright:           2020 Filip Filipović, Nikola Ubavić
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  LICENSE
extra-doc-files:     README.md, README-sr.md

executable asocijacije
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5
    , filepath
    , gi-cairo
    , gi-gdk
    , gi-gdkpixbuf
    , gi-gio
    , gi-gtk
    , haskell-gi-base
    , text
    , json
    , directory
    , random
  c-sources: src/gresource.c
